--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo Hello,World!",
-    "start": "node index.js"
+    "start": "node --experimental-module src/index.js"
   },
   "keywords": [
     "demo"
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "@inquirer/prompts": "^3.0.1",
-    "inquirer": "^9.2.9"
+    "inquirer": "^8.0.0",
+    "uuid": "^9.0.0"
   }
 }
